...
        title: "Allegorie",
        definition: "Ein fassbares, personifiziertes Bild, das der Darstellung eines abstrakten Begriffes dient.",
        examples: ["Justitia"],
        wikipedia: "https://de.wikipedia.org/wiki/Allegorie")
    
    static let alliteration = StylisticDevice(
        title: "Alliteration",
        definition: "Die Wiederholung der Anfangsbuchstaben in aufeinanderfolgenden Wörtern.",
        examples: ["„Milch macht müde Männer munter“"],
        wikipedia: "https://de.wikipedia.org/wiki/Alliteration")
    
    static let anapher = StylisticDevice(
        title: "Anapher",
...
    static let dysphemismus = StylisticDevice(
        title: "Dysphemismus",
        definition: "Eine abwertende, wertverschlechternde Umschreibung oder Wortschöpfung.",
        examples: ["„Saftschubse“ statt: „Stewardess“", "„Penner“ statt: „Obdachloser“", "„Ungeziefer“ statt: „Insekten“", "„sich zusammenrotten“ statt: „sich versammeln“"],
        synonym: "Pejoration",
        wikipedia: "https://de.wikipedia.org/wiki/Dysphemismus",
        opposite: "Euphemismus"
    
    )
    
    
    // E
    
...
        definition: "Ein Ausruf. (meist Gefühlsausdruck)",
        examples: ["„Ah!“", "„Igitt!“"],
        wikipedia: "https://de.wikipedia.org/wiki/Interjektion")

    
    static let inversion = StylisticDevice(
        title: "Inversion",
        definition: "Eine Umkehrung der normalen Wortstellung zur Hervorhebung des Umgestellten.",
        examples: ["„Ein Dieb ist er!“ statt: „Er ist ein Dieb!“"],
        wikipedia: "https://de.wikipedia.org/wiki/Inversion_(Sprache)")

    
    static let invokation = StylisticDevice(
...
